syntax = "proto3";

option java_multiple_files = true;

package mnm.sep3;

option csharp_namespace = "GrpcProofOfConceptClient";

message QuestionDTO {
  string question = 1;
  string answer = 2;
  int32 id = 3;
}

message GetQuestionRequest
{
  int32 questionId = 1;
}

message GetQuestionResponse
{
  QuestionDTO question = 1;
}

message GetQuestionsRequest
{
}

message GetQuestionsResponse
{
  repeated QuestionDTO question = 1;
}

message CreateQuestionRequest {
  string question = 1;
  string answer = 2;
}

service ProofOfConceptService
{
  rpc GetQuestion (GetQuestionRequest) returns (GetQuestionResponse);
  rpc GetAllQuestions (GetQuestionsRequest) returns (GetQuestionsResponse);
  rpc CreateQuestion (CreateQuestionRequest) returns (GetQuestionResponse);
}